Preventing line-wrap in side-nav.

--- a/admin/src/widgets/navigation-tree.scss
+++ b/admin/src/widgets/navigation-tree.scss
@@ -10,25 +10,25 @@
     .level2 {
         font-size: 0.8em;
         padding-left: 0.5em;
+        margin-top: 0.2em;
         text-overflow: ellipsis;
         overflow: hidden;
-        margin-top: 0.2em;
+        white-space: nowrap;
     }
 
     .level3 {
         font-size: 0.95em;
         padding-left: 0.6em;
-        text-overflow: ellipsis;
-        overflow: hidden;
         margin-top: 0.2em;
     }
 
     .level4 {
         font-size: 0.95em;
         padding-left: 0.5em;
+        margin-top: 0.2em;
         text-overflow: ellipsis;
         overflow: hidden;
-        margin-top: 0.2em;
+        white-space: nowrap;
     }
 
     A {
